--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Projects from "../components/Projects.astro";
 		<SectionContainer
 			class="py-20 flex justify-between justify-items-center"
 		>
-			<div class="w-[40%] ml-10">
+			<div class="w-[40%] ml-10 h-[550px]">
 				<h1 class="text-4xl">Hola, soy Luis Gómez</h1>
 				<strong class="text-6xl">Desarollador Web</strong>
 				<p class="mt-7 text-lg text-justify">
@@ -42,35 +42,43 @@ import Projects from "../components/Projects.astro";
 					</SocialRef>
 				</nav>
 			</div>
-			<img
+			<!-- <img
 				class="h-[550px] rounded-[15px]"
-				src="https://i.pinimg.com/originals/9b/5e/a6/9b5ea679e32187cc7b1b535ecb847bbc.png"
+				src="https://cdn3.emoji.gg/emojis/5784_ai_ooto_peace.png"
 				alt="front photo"
-			/>
+			/> -->
 		</SectionContainer>
-		<SectionContainer id="about-me" class="py-14 flex flex-col">
+		<SectionContainer id="about-me" class="py-16 flex flex-col">
 			<div class="flex">
 				<AboutMeIcon class="size-14 mr-4" />
 				<strong class="text-5xl pb-10">Sobre mi</strong>
 			</div>
 			<div class="flex justify-between">
 				<article class="w-[50%]">
-					<p class="text-center text-9xl">1</p>
-					<p class="text-center text-xl">Año de experiencia</p>
+					<p class="text-center text-9xl">2</p>
+					<p class="text-center text-xl">Años de experiencia</p>
 				</article>
 				<article class="p-4">
-					<p class="text-justify text-lg">
+					<p class="text-justify text-lg mb-4">
 						Soy Luis Enrique Gómez Flores. Desarrollador Web
-						especializado en Front-End y Dibujante. Soy egresado de
-						la Universidad Tecnologica de Cancún como T.S.U en
-						Desarrollo de Software Multiplataforma y actualmente
-						estoy estudiando la Ingenieria en Desarrollo y Gestión
-						de Software. He trabajado en proyectos independientes y
-						también he realizado mis prácticas profesionales como
-						Desarrollador Full Stack.
+						especializado en Front-End e Ilustrador. Disfruto
+						fusionar mi creatividad artística con la programación
+						para crear experiencias cautivadoras y atractivas para
+						los usuarios.
+					</p>
+					<p class="text-justify text-lg mb-4">
+						Mi enfoque se centra en la sinergia entre diseño y
+						desarrollo, comprometiéndome a utilizar mis habilidades
+						tanto en el ámbito del diseño como en el desarrollo web
+						para crear software de alta calidad.
+					</p>
+					<p class="text-justify text-lg">
+						Siempre estoy en busca de maneras innovadoras de mejorar
+						aplicaciones y agregar un valor significativo a cada
+						proyecto.
 					</p>
 					<div class="flex justify-evenly gap-x-10">
-						<CardSkills >
+						<CardSkills>
 							<p class="text-center text-xl">Hard Skills</p>
 							<ul class="mt-5">
 								<li>- Desarrollo Front-End</li>
@@ -94,7 +102,7 @@ import Projects from "../components/Projects.astro";
 				</article>
 			</div>
 		</SectionContainer>
-		<SectionContainer id="projects" class="py-14 flex flex-col">
+		<SectionContainer id="projects" class="py-16 flex flex-col">
 			<div class="flex">
 				<ProjectsIcon class="size-14 mr-4" />
 				<strong class="text-5xl pb-10">Proyectos</strong>
