--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,18 @@
-<header class="flex justify-between items-center py-4 w-[95%]">
-    <img class="rounded-full size-12" src="https://i.pinimg.com/550x/0b/7c/3b/0b7c3bfdfb2174dd00c1cd374f8ae1ef.jpg" alt="poke photo">
+<header
+    class="flex justify-between items-center py-4 w-full sticky top-0 bg-black px-[30px]"
+>
+    <a
+        href="https://github.com/PoquetzSY"
+        class="hover:-translate-y-1 transition text-2xl poke"
+        target="_blank"
+        rel="noopener noreferrer">PoquetzSY</a
+    >
 
     <nav class="flex flex-row gap-x-10">
-        <!-- <a href="#top">Inicio</a> -->
-        <a href="#about-me">Sobre mi</a>
-        <a href="#projects">Proyectos</a>
+        <a href="#top">Inicio</a>
+        <a href="#about-me" class="hover:-translate-y-1 transition">Sobre mi</a>
+        <a href="#projects" class="hover:-translate-y-1 transition">Proyectos</a>
+        <a href="" download=""></a>
         <!-- <a href="/contact">Contact</a> -->
     </nav>
 </header>
