--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/Header.astro";
 import "@fontsource-variable/quicksand";
+import '@fontsource-variable/overpass-mono';
 interface Props {
 	title: string;
 }
@@ -18,31 +19,38 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-[#000000] bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]">
+	<body>
 		<Header />
 		<slot />
 	</body>
 </html>
 <style is:global>
 	:root {
-		color-scheme: light dark;
+		color-scheme: dark;
 	}
 	html {
 		font-family: "Quicksand Variable", system-ui, sans-serif;
 		scroll-behavior: smooth;
 	}
 	body {
-		background-color: #050505;
+		background: #000000;
+		background: radial-gradient(
+			circle at center,
+			rgba(255, 255, 255, 0.2) 1px,
+			rgba(0, 9, 29, 0.2) 1px
+		);
+		background-size: 20px 20px;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		min-height: calc(100vh - 72px);
 	}
-	@media (prefers-reduced-motion: reduce){
-		html{
+	.poke{
+		font-family: 'Overpass Mono Variable', sans-serif;
+	}
+	@media (prefers-reduced-motion: reduce) {
+		html {
 			scroll-behavior: auto;
 		}
 	}
-
 </style>
