hotfix home text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,11 +22,9 @@ import Projects from "../components/Projects.astro";
 				<p class="mt-7 text-lg text-justify">
 					Especializado en el <span class="text-blue-200"
 						>front-end</span
-					>.<span class="opacity-90">
-						Fusiono mi creatividad, pasión por el dibujo y
-						habilidades técnicas para dar vida a diseños únicos en
-						cada uno de mis proyectos.</span
-					>
+					>. Fusiono mi creatividad, pasión por el dibujo y
+					habilidades técnicas para dar vida a diseños únicos en cada
+					uno de mis proyectos.
 				</p>
 				<nav class="flex gap-x-4 justify-center py-3">
 					<SocialRef
