--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,10 +9,17 @@
     >
 
     <nav class="flex flex-row gap-x-10">
-        <a href="#top">Inicio</a>
+        <a href="#top" class="hover:-translate-y-1 transition">Inicio</a>
         <a href="#about-me" class="hover:-translate-y-1 transition">Sobre mi</a>
-        <a href="#projects" class="hover:-translate-y-1 transition">Proyectos</a>
-        <a href="" download=""></a>
+        <a href="#projects" class="hover:-translate-y-1 transition">Proyectos</a
+        >
+        <a
+            href="/CV/CV_LuisGomez.pdf"
+            download
+            class="bg-transparent hover:bg-blue-300 text-blue-300 font-semibold hover:text-black px-4 border border-blue-300 hover:border-transparent rounded hover:scale-[115%] transition"
+        >
+            CV
+        </a>
         <!-- <a href="/contact">Contact</a> -->
     </nav>
 </header>
