--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -74,8 +74,8 @@ const PROJECTS = [
         title: "Portafolio",
         description:
             "¡Bienvenido a mi portafolio personal! Este sitio web ha sido desarrollado con Astro y estilizado con Tailwind CSS, combinando eficiencia y diseño moderno.",
-        link: "https://zonasar.netlify.app/",
-        github: "https://github.com/PoquetzSY/zonas-ar",
+        link: "https://poquetz-portfolio.netlify.app/",
+        github: "https://github.com/PoquetzSY/Portafolio",
         image: "/projects/portafolio.webp",
         tags: [TAGS.Astro, TAGS.TAILWIND],
     }
