--- a/src/components/CardSkills.astro
+++ b/src/components/CardSkills.astro
@@ -1,3 +1,3 @@
-<section class="rounded-md border border-white/40 w-[300px] my-14 p-5">
+<section class="rounded-md border border-white/40 lg:w-[300px] w-[250px] lg:h-auto h-[250px] my-14 p-5">
     <slot />
 </section>
