--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,12 +14,12 @@ import Projects from "../components/Projects.astro";
 <Layout title="Portafolio de Luis Gómez">
 	<main>
 		<SectionContainer
-			class="py-20 flex justify-between justify-items-center"
+			class="py-28 md:py-20 flex flex-col lg:flex-row lg:justify-between justify-items-center text-center lg:text-start"
 		>
-			<div class="w-[40%] ml-10 h-[550px]">
-				<h1 class="text-4xl">Hola, soy Luis Gómez</h1>
-				<strong class="text-6xl">Desarollador Web</strong>
-				<p class="mt-7 text-lg text-justify">
+			<div class="w-full lg:w-[40%] lg:ml-10 h-[550px] ">
+				<h1 class="text-3xl md:text-4xl">Hola, soy Luis Gómez</h1>
+				<strong class="text-5xl md:text-6xl">Desarollador Web</strong>
+				<p class="mt-7 text-lg lg:text-justify">
 					Especializado en el <span class="text-blue-200"
 						>front-end</span
 					>. Fusiono mi creatividad, pasión por el dibujo y
@@ -41,18 +41,18 @@ import Projects from "../components/Projects.astro";
 				</nav>
 			</div>
 			<!-- <img
-				class="h-[550px] rounded-[15px]"
+				class="h-[550px] rounded-[15px] lg:flex hidden"
 				src="https://cdn3.emoji.gg/emojis/5784_ai_ooto_peace.png"
 				alt="front photo"
 			/> -->
 		</SectionContainer>
-		<SectionContainer id="about-me" class="py-16 flex flex-col">
-			<div class="flex">
+		<SectionContainer id="about-me" class="py-[72px] flex flex-col">
+			<div class="flex ">
 				<AboutMeIcon class="size-14 mr-4" />
 				<strong class="text-5xl pb-10">Sobre mi</strong>
 			</div>
-			<div class="flex justify-between">
-				<article class="w-[50%]">
+			<div class="flex flex-col md:flex-row md:justify-between">
+				<article class="md:w-[50%]">
 					<p class="text-center text-9xl">2</p>
 					<p class="text-center text-xl">Años de experiencia</p>
 				</article>
@@ -75,9 +75,9 @@ import Projects from "../components/Projects.astro";
 						aplicaciones y agregar un valor significativo a cada
 						proyecto.
 					</p>
-					<div class="flex justify-evenly gap-x-10">
+					<div class="flex flex-col lg:justify-evenly md:flex-row md:gap-x-10 items-center ">
 						<CardSkills>
-							<p class="text-center text-xl">Hard Skills</p>
+							<p class="text-center text-lg lg:text-xl">Hard Skills</p>
 							<ul class="mt-5">
 								<li>- Desarrollo Front-End</li>
 								<li>- Diseño web</li>
@@ -87,7 +87,7 @@ import Projects from "../components/Projects.astro";
 							</ul>
 						</CardSkills>
 						<CardSkills>
-							<p class="text-center text-xl">Soft Skills</p>
+							<p class="text-center text-lg lg:text-xl">Soft Skills</p>
 							<ul class="mt-5">
 								<li>- Creatividad</li>
 								<li>- Pensamiento critico</li>
@@ -100,7 +100,7 @@ import Projects from "../components/Projects.astro";
 				</article>
 			</div>
 		</SectionContainer>
-		<SectionContainer id="projects" class="py-16 flex flex-col">
+		<SectionContainer id="projects" class="py-[72px] flex flex-col">
 			<div class="flex">
 				<ProjectsIcon class="size-14 mr-4" />
 				<strong class="text-5xl pb-10">Proyectos</strong>
