--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import CardSkills from "../components/CardSkills.astro";
 import Projects from "../components/Projects.astro";
 ---
 
-<Layout title="Portafolio de Luis Gómez">
+<Layout title="Portafolio de Luis Gómez - Desarrollador Web">
 	<main>
 		<SectionContainer
 			class="py-28 md:py-20 flex flex-col lg:flex-row lg:justify-between justify-items-center text-center lg:text-start"
