--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/Layout.astro";
     title="Portafolio de Luis Gómez - Desarrollador Web"
     description="Contrata a Luis para crear tu aplicación web o móvil. Desarrollador Web e Ilustrador."
 >
-    <main>
-        <h1 class="font-medium text-center">Pagina no encontrada</h1>
+    <main class="flex items-center h-[calc(100vh - 64px)]">
+        <h1 class="font-medium">Pagina no encontrada</h1>
     </main>
 </Layout>
