--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,8 +56,8 @@ import Projects from "../components/Projects.astro";
 			</div>
 			<div class="flex flex-col md:flex-row md:justify-between">
 				<article class="md:w-[50%]">
-					<p class="text-center text-9xl">2</p>
-					<p class="text-center text-xl">Años de experiencia</p>
+					<p class="text-center text-9xl">1</p>
+					<p class="text-center text-xl">Año de experiencia</p>
 				</article>
 				<article class="p-4">
 					<p class="text-justify text-lg mb-4">
